--- a/specs/index.html
+++ b/specs/index.html
@@ -36,11 +36,13 @@
               <li><a href="./model-viewer/index.html">model viewer</a></li>
               <li><a href="./query-viewer/index.html">query viewer</a></li>
               <li><a href="./task-viewer/index.html">task viewer</a></li>
+              <li><a href="./viewer-driver/index.html">viewer driver</a></li>
             </ul>
 
             <h2>Shared components</h2>
             <ul>
               <li><a href="./shared/alert/index.html">alert</a></li>
+              <li><a href="./shared/driver/index.html">driver</a></li>
               <li><a href="./shared/icon/index.html">icon</a></li>
               <li><a href="./shared/heading-container/">heading container</a></li>
               <li><a href="./shared/tabs/index.html">tabs</a></li>
