--- a/specs/markdown-viewer/index.html
+++ b/specs/markdown-viewer/index.html
@@ -43,6 +43,7 @@
       import "../../src/command-viewer";
       import "../../src/dmn-viewer";
       import "../../src/event-viewer";
+      import "../../src/feature-viewer";
       import "../../src/mermaid-viewer";
       import "../../src/model-viewer";
       import "../../src/query-viewer";
