--- a/specs/markdown-viewer/index.html
+++ b/specs/markdown-viewer/index.html
@@ -16,6 +16,7 @@
         <button id="command">Command</button>
         <button id="dmn">DMN</button>
         <button id="event">Event</button>
+        <button id="feature">Feature</button>
         <button id="mermaid">Mermaid</button>
         <button id="model">Model</button>
         <button id="query">Query</button>
@@ -41,6 +42,7 @@
       import "../../src/command-viewer";
       import "../../src/dmn-viewer";
       import "../../src/event-viewer";
+      import "../../src/feature-viewer";
       import "../../src/mermaid-viewer";
       import "../../src/model-viewer";
       import "../../src/query-viewer";
