--- a/specs/markdown-viewer/index.html
+++ b/specs/markdown-viewer/index.html
@@ -10,20 +10,20 @@
     <main>
       <h1>Markdown viewer</h1>
       <div id="buttons">
-        <button id="business service" data-file="./examples/business-service/index.md">Service</button>
-        <button id="business service" data-file="./examples/business-service/business-function/index.md">Function</button>
-        <button id="bpmn" data-file="./examples/bpmn.md">BPMN</button>
-        <button id="business-model-canvas" data-file="./examples/business-model-canvas.md">Business model canvas</button>
-        <button id="business-reference-architecture" data-file="./examples/business-reference-architecture.md">Business reference architecture</button>
-        <button id="command" data-file="./examples/command.md">Command</button>
-        <button id="dmn" data-file="./examples/dmn.md">DMN</button>
-        <button id="event" data-file="./examples/event.md">Event</button>
-        <button id="feature" data-file="./examples/feature.md">Feature</button>
-        <button id="mermaid" data-file="./examples/mermaid.md">Mermaid</button>
-        <button id="model" data-file="./examples/model.md">Model</button>
-        <button id="query" data-file="./examples/query.md">Query</button>
-        <button id="tabs" data-file="./examples/tabs.md">Tabs</button>
-        <button id="task" data-file="./examples/task.md">Task</button>
+        <button data-file="./examples/payroll-service/index.md">Payroll service</button>
+        <button data-file="./examples/payroll-service/calculate-payroll/index.md">Calculate payroll</button>
+        <button data-file="./examples/bpmn.md">BPMN</button>
+        <button data-file="./examples/business-model-canvas.md">Business model canvas</button>
+        <button data-file="./examples/business-reference-architecture.md">Business reference architecture</button>
+        <button data-file="./examples/command.md">Command</button>
+        <button data-file="./examples/dmn.md">DMN</button>
+        <button data-file="./examples/event.md">Event</button>
+        <button data-file="./examples/feature.md">Feature</button>
+        <button data-file="./examples/mermaid.md">Mermaid</button>
+        <button data-file="./examples/model.md">Model</button>
+        <button data-file="./examples/query.md">Query</button>
+        <button data-file="./examples/tabs.md">Tabs</button>
+        <button data-file="./examples/task.md">Task</button>
       </div>
       <markdown-viewer src="examples/markdown.md"></markdown-viewer>
       <h2>Run tests</h2>
