--- a/specs/index.html
+++ b/specs/index.html
@@ -22,6 +22,7 @@
               <li><a href="./dmn-viewer/index.html">DMN viewer</a></li>
               <li><a href="./event-viewer/index.html">event viewer</a></li>
               <li><a href="./feature-viewer/index.html">feature viewer</a></li>
+              <li><a href="./json-schema-viewer/index.html">json schema viewer</a></li>
               <li><a href="./markdown-viewer/index.html">markdown viewer</a></li>
               <li><a href="./mermaid-viewer/index.html">mermaid viewer</a></li>
               <li><a href="./model-viewer/index.html">model viewer</a></li>
