--- a/specs/bpmn-viewer/index.html
+++ b/specs/bpmn-viewer/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>BPMN viewer</title>
     <link rel="stylesheet" href="../theme.css" />
+    <link rel="stylesheet" href="../specflow.css" />
     <style>
 
       bpmn-viewer {
