--- a/specs/business-reference-architecture/index.html
+++ b/specs/business-reference-architecture/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Business reference architecture</title>
     <link rel="stylesheet" href="../theme.css" />
+    <link rel="stylesheet" href="../specflow.css" />
   </head>
 
   <body>
