--- a/specs/mermaid-viewer/index.html
+++ b/specs/mermaid-viewer/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Mermaid viewer</title>
     <link rel="stylesheet" href="../theme.css" />
+    <link rel="stylesheet" href="../specflow.css" />
     <style>
       mermaid-viewer {
         display: block;
