--- a/specs/model-viewer/index.html
+++ b/specs/model-viewer/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Model viewer</title>
     <link rel="stylesheet" href="../theme.css" />
+    <link rel="stylesheet" href="../specflow.css" />
   </head>
 
   <body>
