--- a/specs/shared/heading-container/index.html
+++ b/specs/shared/heading-container/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Heading container component</title>
     <link rel="stylesheet" href="../../theme.css" />
+    <link rel="stylesheet" href="../../specflow.css" />
   </head>
 
   <body>
