--- a/specs/shared/icon/index.html
+++ b/specs/shared/icon/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8" />
     <title>Icon component</title>
     <link rel="stylesheet" href="../../theme.css" />
+    <link rel="stylesheet" href="../../specflow.css" />
     <style>
       .icons {
         display: flex;
