--- a/specs/markdown-viewer/index.html
+++ b/specs/markdown-viewer/index.html
@@ -23,6 +23,7 @@
         <button data-file="./examples/mermaid.md">Mermaid</button>
         <button data-file="./examples/model.md">Model</button>
         <button data-file="./examples/query.md">Query</button>
+        <button data-file="./examples/schema.md">Schema</button>
         <button data-file="./examples/tabs.md">Tabs</button>
         <button data-file="./examples/task.md">Task</button>
       </div>
@@ -49,6 +50,7 @@
       import "../../src/mermaid-viewer";
       import "../../src/model-viewer";
       import "../../src/query-viewer";
+      import "../../src/schema-viewer";
       import "../../src/task-viewer";
 
       const buttons = document.getElementById("buttons");
