--- a/specs/schema-viewer/index.html
+++ b/specs/schema-viewer/index.html
@@ -13,7 +13,7 @@
       <div id="buttons">
         <button id="change-src">Change src</button>
       </div>
-      <schema-viewer src="../markdown-viewer/examples/payroll-service/calculate-payroll/get-time-and-attendance.query.yml"></schema-viewer>
+      <schema-viewer src="../markdown-viewer/examples/payroll-service/calculate-payroll/get-time-and-attendance.query.yml" use-case="command"></schema-viewer>
       <h2>Run tests</h2>
       <code>
         npm run test -- 'schema-viewer'
