added bdo-driver to markdown it

--- a/specs/markdown-viewer/index.html
+++ b/specs/markdown-viewer/index.html
@@ -36,6 +36,9 @@
     <script type="module">
       import "../../src/markdown-viewer";
 
+      import "../../src/shared/driver";
+      import "../../src/shared/button";
+      import "../../src/shared/icon";
       import "../../src/shared/heading-container";
       import "../../src/shared/tabs";
 
