--- a/specs/feature-viewer/index.html
+++ b/specs/feature-viewer/index.html
@@ -9,7 +9,7 @@
 
   <body>
     <main>
-      <h1>DMN viewer</h1>
+      <h1>Feature viewer</h1>
       <div id="buttons">
         <button id="change-src">Change src</button>
       </div>
