--- a/specs/schema-viewer/index.html
+++ b/specs/schema-viewer/index.html
@@ -16,14 +16,13 @@
       <schema-viewer src="../markdown-viewer/examples/payroll-service/calculate-payroll/index.command.schema.yml"></schema-viewer>
 
       <h1>Event schema viewer</h1>
-      <schema-viewer src="../markdown-viewer/examples/payroll-service/calculate-payroll/get-time-and-attendance.query.schema.yml" use-case="command"></schema-viewer>
+      <schema-viewer src="../markdown-viewer/examples/payroll-service/calculate-payroll/payroll-calculated.event.schema.yml"></schema-viewer>
 
       <h1>Query schema viewer</h1>
-      <schema-viewer src="../markdown-viewer/examples/payroll-service/calculate-payroll/get-time-and-attendance.query.schema.yml" use-case="command"></schema-viewer>
+      <schema-viewer src="../markdown-viewer/examples/payroll-service/calculate-payroll/get-time-and-attendance.query.schema.yml"></schema-viewer>
 
       <h1>Task schema viewer</h1>
-      <schema-viewer src="../markdown-viewer/examples/payroll-service/calculate-payroll/get-time-and-attendance.query.schema.yml" use-case="command"></schema-viewer>
-
+      <schema-viewer src="../markdown-viewer/examples/payroll-service/calculate-payroll/solve-problem.task.schema.yml"></schema-viewer>
 
       <h2>Run tests</h2>
       <code>
